# Data_Engineering

./: README.md  main.py  pyproject.toml
Bases de Datos/SQL/: VannaAI_Text_to_SQL.ipynb
Carga de Archivos/: CargaArchivos.ipynb
ETL/: APISports.ipynb
Fuentes de Datos/API/: notebook.ipynb  pipeline.py
SQL/: Copia_de_VannaAI_Text_to_SQL.ipynb  Taller.ipynb  VannaAI_Text_to_SQL.ipynb  main.ipynb
Transformación de Datos/: Fechas.ipynb
WebScraping/: Selenium&MongoApplication.ipynb
