[project]
name = "ingenieria-de-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "missingno>=0.5.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "selenium>=4.35.0",
    "vanna>=0.7.9",
]
